objects/Quote_Line_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payor Name</label>
        <referenceTo>Insurance__c</referenceTo>
        <relationshipLabel>Quote Line Insurance</relationshipLabel>
        <relationshipName>Quote_Line_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Insurance</relationshipLabel>
        <relationshipName>Quote_Line_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Drug__c</fullName>
        <label>Sales Price - Drug</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Payor__c</fullName>
        <label>Sales Price - Payor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Quote Line Insurance</label>
    <nameField>
        <displayFormat>Qli-{0000000000}</displayFormat>
        <label>Quote Line Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Insurance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>